@@ -43,6 +43,7 @@ class ProtectionForm {
 				// but the db allows multiples separated by commas.
 				$this->mRestrictions[$action] = implode( '', $this->mTitle->getRestrictions( $action ) );
 			}
+			$this->mRestrictions['robots'] = implode( ',', $this->mTitle->getRestrictions( 'robots' ) );
 
 			$this->mCascade = $this->mTitle->areRestrictionsCascading();
 
@@ -72,9 +73,17 @@ class ProtectionForm {
 					$this->mRestrictions[$action] = $val;
 				}
 			}
+
+			// Read checkboxex only if user is allowed to change robots policy, otherwise keep previous policy
+			if ( $wgUser->isAllowed( 'editrobots' ) ) {
+				$robotspolicy  = $wgRequest->getBool( 'mwProtect-robots-noindex' )  ? 'noindex'   : 'index';
+				$robotspolicy .= $wgRequest->getBool( 'mwProtect-robots-nofollow' ) ? ',nofollow' : ',follow';
+				// 'index,follow' is default, no need to set this explicitly at this point; is done at Article::View
+				$this->mRestrictions['robots'] = ( $robotspolicy == 'index,follow' ) ? '' : $robotspolicy;
+			}
 		}
 	}
-	
+
 	function execute() {
 		global $wgRequest;
 		if( $wgRequest->wasPosted() ) {
@@ -199,7 +208,7 @@ class ProtectionForm {
 	}
 
 	function buildForm() {
-		global $wgUser;
+		global $wgUser, $wgRestrictionTypes;
 
 		$out = '';
 		if( !$this->disabled ) {
@@ -223,14 +232,17 @@ class ProtectionForm {
 		$out .= "<tr>\n";
 		foreach( $this->mRestrictions as $action => $required ) {
 			/* Not all languages have V_x <-> N_x relation */
-			$out .= "<th>" . wfMsgHtml( 'restriction-' . $action ) . "</th>\n";
+			if ( in_array( $action, $wgRestrictionTypes ) )
+				$out .= "<th>" . wfMsgHtml( 'restriction-' . $action ) . "</th>\n";
 		}
 		$out .= "</tr>\n";
 		$out .= "<tr>\n";
 		foreach( $this->mRestrictions as $action => $selected ) {
-			$out .= "<td>\n";
-			$out .= $this->buildSelector( $action, $selected );
-			$out .= "</td>\n";
+			if ( in_array( $action, $wgRestrictionTypes ) ) {
+				$out .= "<td>\n";
+				$out .= $this->buildSelector( $action, $selected );
+				$out .= "</td>\n";
+			}
 		}
 		$out .= "</tr>\n";
 
@@ -249,6 +261,7 @@ class ProtectionForm {
 		if( !$this->disabled )
 			$out .= '<tr><td></td><td>' . $this->buildWatchInput() . "</td></tr>\n";
 
+		$out .= $this->buildRobotsInput();
 		$out .= $this->buildExpiryInput();
 
 		if( !$this->disabled ) {
@@ -315,6 +328,20 @@ class ProtectionForm {
 		$id = 'mwProtect-cascade';
 		$ci = wfCheckLabel( wfMsg( 'protect-cascade' ), $id, $id, $this->mCascade, $this->disabledAttrib);
 		return $ci;
+	}
+
+	function buildRobotsInput() {
+		global $wgUser;
+		$robotsallowed = $wgUser->isAllowed( 'editrobots' ) ? array() : array( 'disabled' => 'disabled' );
+		$noindexset  = ( isset( $this->mRestrictions['robots'] ) && strstr( $this->mRestrictions['robots'], 'noindex' ) )  ? true : false;
+		$nofollowset = ( isset( $this->mRestrictions['robots'] ) && strstr( $this->mRestrictions['robots'], 'nofollow' ) ) ? true : false;
+		$ret = "<tr><td align=\"right\">";
+		$ret .= Xml::label( wfMsg( 'protect-robotspolicy' ), 'mwProtect-robots-label' );
+		$ret .= "</td> <td align=\"left\" width=\"60\">";
+		$ret .= Xml::checkLabel( 'noindex', 'mwProtect-robots-noindex', 'mwProtect-robots-noindex', $noindexset, $robotsallowed );
+		$ret .= Xml::checkLabel( 'nofollow', 'mwProtect-robots-nofollow', 'mwProtect-robots-nofollow', $nofollowset, $robotsallowed );
+		$ret .= "</td></tr>";
+		return $ret;
 	}
 
 	function buildExpiryInput() {
