@@ -95,6 +95,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Throw a showstopper exception when a hook function fails to return a value.
   Forgetting to give a 'true' return value is a very common error which tends
   to cause hard-to-track-down interactions between extensions.
+* (bug 9415) Added options to Special:Protect to allow setting of per-page robot
+  policies. This can be done only by users with the 'editrobots' permission
 
 == Bugfixes since 1.10 ==
 
